delete initial modules (nn in pure python)

--- a/0_workshop_0_jupyter.ipynb
+++ b/0_workshop_0_jupyter.ipynb
@@ -45,7 +45,7 @@
     }
    },
    "source": [
-    "## Dwa mody (stany) komórki:  \n",
+    "## Dwa stany komórki:  \n",
     "\n",
     "**edit mode** - mozemy edytowac zawartość komórki  \n",
     "**insert mode** - możemy edytować samą komórkę (zmienic typ zawartosci eg. kod lub markdown)  "
@@ -130,72 +130,8 @@
       "    }\n",
       "   },\n",
       "   \"source\": [\n",
-      "    \"<img src='prezentacja.png' />\\n\",\n",
-      "    \" \\n\",\n",
-      "    \"C:\\\\Users\\\\ajankows\\\\Desktop\\\\python\\\\002_notebooks\\\\workshop\\\\Sztuczna_Inteligencja_dla_poetĂłw.ppt\"\n",
-      "   ]\n",
-      "  },\n",
-      "  {\n",
-      "   \"cell_type\": \"markdown\",\n",
-      "   \"metadata\": {\n",
-      "    \"slideshow\": {\n",
-      "     \"slide_type\": \"slide\"\n",
-      "    }\n",
-      "   },\n",
-      "   \"source\": [\n",
-      "    \"# Spis tresci\\n\",\n",
-      "    \"1. ## [Podstawy programowania w Pythonie](http://localhost:8888/notebooks/002_notebooks/workshop/0_workshop_1_Python_w_10_minut.ipynb)   \\n\",\n",
-      "    \"2. ## [Programujemy pierwszÄ… sieÄ‡ neuronowÄ…](http://localhost:8888/notebooks/002_notebooks/workshop/0_workshop_2_Pierwsza_Siec_Neuronowa.ipynb)  \\n\",\n",
-      "    \"    3. [Nasza sieÄ‡ zaczyna siÄ™ uczyÄ‡](http://localhost:8888/notebooks/002_notebooks/workshop/0_workshop_3_sie%C4%87_si%C4%99_uczy.ipynb) \\n\",\n",
-      "    \"4. ## [Funkcja XOR - pierwsza w pelni dziaĹ‚ajÄ…ca sieÄ‡](http://localhost:8888/notebooks/002_notebooks/workshop/0_workshop_4_xor.ipynb)  \\n\",\n",
-      "    \"    4. [Macierze (tablice) i biblioteka Numpy](http://localhost:8888/notebooks/002_notebooks/workshop/0_workshop_3_numpy_short.ipynb)\\n\",\n",
-      "    \"    4. [Inference, testujemy naszÄ… sieÄ‡](http://localhost:8888/notebooks/002_notebooks/workshop/0_workshop_4_xor_manual_test.ipynb)\\n\",\n",
-      "    \"6. ## [Rozpoznawanie cyfr - zbiĂłr MNIST](http://localhost:8889/notebooks/002_notebooks/workshop/0_workshop_5_nn_mnist.ipynb)   \\n\",\n",
-      "    \"7. ## [Keras - Python Deep Learning library](http://localhost:8888/notebooks/002_notebooks/workshop/0_workshop_6_Keras.ipynb)  \\n\",\n",
-      "    \"    8. [EXTRA Keras CIFAR10 dataset](http://localhost:8888/notebooks/002_notebooks/workshop/0_workshop_7_Keras_CIFAR10.ipynb)\\n\",\n",
-      "    \"\\n\",\n",
-      "    \"\\n\"\n",
-      "   ]\n",
-      "  },\n",
-      "  {\n",
-      "   \"cell_type\": \"markdown\",\n",
-      "   \"metadata\": {},\n",
-      "   \"source\": [\n",
-      "    \"### to do\\n\",\n",
-      "    \"\\n\",\n",
-      "    \"### dokumentacja wymagaĹ„ (biblioteki + instrukcje instalacji + docker??)\\n\",\n",
-      "    \"\\n\",\n",
-      "    \"### [docker](https://store.docker.com/search?offering=community&type=edition)\\n\",\n",
-      "    \"[windows pro or enterprise](https://store.docker.com/editions/community/docker-ce-desktop-windows)\\n\",\n",
-      "    \"\\n\",\n",
-      "    \"[windows home - toolbox](https://docs.docker.com/toolbox/toolbox_install_windows/#what-you-get-and-how-it-works)\\n\",\n",
-      "    \"\\n\",\n",
-      "    \"[usunac siec ktora sie zaczyna uczyc]\\n\",\n",
-      "    \"[dodac rysunek sieci do xor]\\n\",\n",
-      "    \"\\n\",\n",
-      "    \"[opis macierzy i biblioteki numpy](http://localhost:8888/notebooks/002_notebooks/workshop/0_workshop_3_numpy_short.ipynb#Macierze---tablice) \\n\",\n",
-      "    \"[rysunek danych pokjedynczo i tabeli]\\n\",\n",
-      "    \"[prdsumowanie poprzednich czesci]\\n\",\n",
-      "    \"[opis zbioru mnist, programu dla us post,LeCun](http://localhost:8888/notebooks/002_notebooks/workshop/0_workshop_5_nn_mnist.ipynb#Rozpoznawanie-cyfr-i-zbi%C3%B3r-MNIST)   \\n\",\n",
-      "    \"[dopisac notebook for keras MNIST (moze nawet cifar??)](http://localhost:8888/notebooks/002_notebooks/workshop/0_workshop_6_Keras.ipynb)  \\n\",\n",
-      "    \"[Keras - dopisac test do wytrenowanej sieci](http://localhost:8888/notebooks/002_notebooks/workshop/0_workshop_6_Keras.ipynb#Sprawdzamy,-czy-nasza-sie%C4%87-dzia%C5%82a)  \"\n",
-      "   ]\n",
-      "  },\n",
-      "  {\n",
-      "   \"cell_type\": \"markdown\",\n",
-      "   \"metadata\": {\n",
-      "    \"slideshow\": {\n",
-      "     \"slide_type\": \"slide\"\n",
-      "    }\n",
-      "   },\n",
-      "   \"source\": [\n",
-      "    \"https://www.tensorflow.org/install/  \\n\",\n",
-      "    \"https://keras.io/#installation  \\n\",\n",
-      "    \"https://www.anaconda.com/download/  \\n\",\n",
-      "    \"https://github.com/stared/keras-sequential-ascii  \\n\",\n",
-      "    \"https://ipywidgets.readthedocs.io/en/latest/user_install.html  \\n\",\n",
-      "    \"\\n\",\n",
-      "    \"    \"\n",
+      "    \"<img src='prezentacja.png' width ='500' />\\n\",\n",
+      "    \" \\n\"\n",
       "   ]\n",
       "  },\n",
       "  {\n",
@@ -212,49 +148,8 @@
       "    \"nb_conda==2.2.0  \\n\",\n",
       "    \"imageio  \\n\",\n",
       "    \"nbextensions\\n\",\n",
-      "    \"jupyter_nbextensions_configurator\\n\",\n",
-      "    \"\\n\",\n",
-      "    \"### to do\\n\",\n",
-      "    \"jupyter nbextensions_configurator enable --user  \\n\",\n",
-      "    \"jupyter contrib nbextension install --user  \"\n",
+      "    \"jupyter_nbextensions_configurator \"\n",
       "   ]\n",
-      "  },\n",
-      "  {\n",
-      "   \"cell_type\": \"markdown\",\n",
-      "   \"metadata\": {\n",
-      "    \"collapsed\": true,\n",
-      "    \"slideshow\": {\n",
-      "     \"slide_type\": \"slide\"\n",
-      "    }\n",
-      "   },\n",
-      "   \"source\": [\n",
-      "    \"# Instrukcje dla uczestnikĂłw\\n\",\n",
-      "    \"\\n\",\n",
-      "    \"Download Docker engine (dziaĹ‚a z MacOS, Windows Pro/EE, Linux):\\n\",\n",
-      "    \"https://store.docker.com/search?offering=community&type=edition\\n\",\n",
-      "    \"\\n\",\n",
-      "    \"JeĹ›li korzystasz z Windows Home lub starszych wersji musisz skorzystaÄ‡ z Docker Toolbox'a:\\n\",\n",
-      "    \"https://docs.docker.com/toolbox/toolbox_install_windows\\n\",\n",
-      "    \"\\n\",\n",
-      "    \"Start CMD:\\n\",\n",
-      "    \"docker pull ajankows/w_test\\n\",\n",
-      "    \"\\n\",\n",
-      "    \"CMD:\\n\",\n",
-      "    \"docker run -d -p 8888:8888 jupyter/tensorflow-notebook start-notebook.sh --NotebookApp.token=''\\n\",\n",
-      "    \"\\n\",\n",
-      "    \"PrzeglÄ…darka:\\n\",\n",
-      "    \"localhost:8888\\n\",\n",
-      "    \"\\n\",\n",
-      "    \"\\n\",\n",
-      "    \"\\n\",\n",
-      "    \"\\n\",\n",
-      "    \"\\n\"\n",
-      "   ]\n",
-      "  },\n",
-      "  {\n",
-      "   \"cell_type\": \"markdown\",\n",
-      "   \"metadata\": {},\n",
-      "   \"source\": []\n",
       "  }\n",
       " ],\n",
       " \"metadata\": {\n",
@@ -297,7 +192,7 @@
     }
    ],
    "source": [
-    "!cat 00_Spis_Tresci_Workshop.ipynb\n"
+    "!cat 00_lib.ipynb\n"
    ]
   },
   {
@@ -343,6 +238,7 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
+    "scrolled": true,
     "slideshow": {
      "slide_type": "subslide"
     }
